<resources>
    <!--main activity-->
    <string name="app_name">Seva</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Seva App</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_home">Home</string>
    <string name="action_notifications">Notifications</string>
    <string name="action_job">Current Job</string>
    <string name="action_help">Help</string>

    <string name="title_activity_repair">RepairActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_login">Sign in</string>

    <!--login activity-->
    <string name="username_hint">username</string>
    <string name="password_hint">password</string>
    <string name="guest_button_text">GUEST</string>
    <string name="login_button_text">LOG IN</string>

    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!--notification activity-->
    <string name="filter_spinner_text">Filter:&#160;</string>
    <string name="sort_spinner_text">Sort:&#160;</string>
    <string name="decline_button_text">DECLINE</string>
    <string name="accept_button_text">ACCEPT</string>
    <string-array name="sort_types">
        <item>Most recent</item>
        <item>Least recent</item>
    </string-array>

    <!--home fragment-->
    <string name="toilet_dashboard_text">Toilets</string>
    <string name="notification_dashboard_text">Notifications</string>

    <!--settings fragment-->
    <string name="language_option_text">Display language</string>
    <string name="audio_option_text">Audio settings</string>
    <string name="logout_option_text">Logout</string>
    <string name="sms_switch_text">Send me SMS Notifications</string>
    <string name="push_switch_text">Send me Push Notifications</string>

    <!--toilets fragment-->
    <string name="status_text">Status:</string>

    <!--delete fragment-->
    <string name="delete_dialog_text">Are you sure you want to delete this item?</string>

    <!--getstarted activity-->
    <string name="blurb_text">Connecting users to sanitation service.</string>
    <string name="getstarted_button_text">GET STARTED</string>
    <string name="getstarted_title_text">Welcome to the Seva App!</string>
    <string name="oklogin_button_text">Ok, login!</string>

    <!--repair activity-->
    <string name="average_time_text">Average Time</string>
    <string name="total_steps_text">Total Steps</string>
    <string name="other_info_text">Other Info:</string>
    <string name="swipe_text">Swipe to see each step</string>
    <string name="test_button_text">TEST REPAIR</string>
    <string name="done_button_text">DONE</string>
    <string name="test_option_text">Test Now</string>
    <string name="search_option_text">Search</string>
    <string name="help_option_text">Help</string>
    <string name="cancel_option_text">Cancel Job</string>
    <string name="confirm_button_text">CONFIRM ARRIVAL</string>
    <string name="directions_option_text">Directions</string>
    <string name="picture_button_text">TAKE PICTURE</string>

    <!--language settings-->
    <string name="more_button_text">MORE</string>
    <string-array name="languages">
        <item>English</item>
        <item>हिंदी</item>
        <item>বাঙালি</item>
        <item>తెలుగు</item>
        <item>मराठी</item>
        <item>தமிழ்</item>
        <item>اردو</item>
        <item>ಕನ್ನಡ</item>
        <item>ગુજરાતી</item>
    </string-array>

    <string name="english">English</string>
    <string name="hindi">हिंदी</string>
    <string name="bengali">বাঙালি</string>
    <string name="telugu">తెలుగు</string>
    <string name="marathi">मराठी</string>
    <string name="tamil">தமிழ்</string>
    <string name="urdu">اردو</string>
    <string name="kannada">ಕನ್ನಡ</string>
    <string name="gujarati">ગુજરાતી</string>

</resources>
