<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/action_home"/>
        <item
            android:id="@+id/nav_job"
            android:icon="@drawable/ic_assignment_black_24dp"
            android:title="@string/action_job" />
        <item
            android:id="@+id/nav_notifications"
            android:icon="@drawable/ic_notification"
            android:title="@string/action_notifications" />
    </group>
    <group
        android:id="@+id/menu_bottom"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/settings"
            android:title="@string/action_settings" />
        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/ic_help_black_24dp"
            android:title="@string/action_help" />
    </group>
</menu>
