<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="seva.caltech.android.activities.Repair.RepairActivity">
    <item
        android:id="@+id/directions_option"
        android:title="@string/directions_option_text"
        android:orderInCategory="1"
        app:showAsAction="never">
    </item>
    <item
        android:id="@+id/help_option"
        android:title="@string/help_option_text"
        android:orderInCategory="2"
        app:showAsAction="never">
    </item>
    <item
        android:id="@+id/cancel_option"
        android:title="@string/cancel_option_text"
        android:orderInCategory="3"
        app:showAsAction="never">
    </item>
</menu>
