<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:orientation="vertical"
android:background="@color/colorPrimary">

    <LinearLayout
        android:id="@+id/logo_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="115dp"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="32.41dp"
            android:layout_height="36.7dp"
            android:src="@drawable/fill_1" />

        <ImageView
            android:layout_width="32.24dp"
            android:layout_height="36.64dp"
            android:layout_marginStart="15.02dp"
            android:src="@drawable/fill_3" />

        <ImageView
            android:layout_width="20.16dp"
            android:layout_height="36.88dp"
            android:layout_marginStart="15.01dp"
            android:src="@drawable/fill_5" />

        <ImageView
            android:layout_width="12.86dp"
            android:layout_height="30.48dp"
            android:layout_marginStart=".53dp"
            android:layout_marginBottom="3.7dp"
            android:src="@drawable/fill_7" />

        <ImageView
            android:layout_width="31.55dp"
            android:layout_height="37.88dp"
            android:layout_marginStart="15.01dp"
            android:src="@drawable/fill_9" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:id="@+id/blurb"
        android:layout_below="@+id/logo_header"
        android:lineSpacingMultiplier="1.17"
        android:textColor="@android:color/white"
        android:textAlignment="center"
        android:fontFamily="sans-serif-black"
        android:textStyle="bold"
        android:layout_marginTop="153dp"
        android:width="234dp"
        android:layout_centerHorizontal="true"
        android:text="@string/blurb_text"/>

    <Button
        android:id="@+id/get_started_button"
        android:layout_below="@+id/blurb"
        android:layout_width="wrap_content"
        android:layout_height="42dp"
        android:width="239dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="29dp"
        android:text="@string/getstarted_button_text"
        android:textColor="@android:color/white"
        android:backgroundTint="@color/accent"/>

    <Button
        android:id="@+id/login_button"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="32.5dp"
        android:layout_below="@id/get_started_button"
        android:width="238dp"
        android:layout_marginTop="24dp"
        android:layout_centerHorizontal="true"
        android:text="@string/login_button_text"
        android:background="@drawable/login_button"
        android:textColor="@android:color/white"
        />

</RelativeLayout>
